Add Repmgrd Start, Stop, Status and add Repmgrd stop before switchover and restart after if running before.

--- a/roles/role_pgsql_ha_cascade/tasks/create_repmgr.yml
+++ b/roles/role_pgsql_ha_cascade/tasks/create_repmgr.yml
@@ -18,6 +18,7 @@
     - "{{postgresql_repmgr_sql_dir}}"
     - "{{postgresql_repmgr_sh_dir}}"
     - "{{postgresql_repmgr_log_dir}}"
+    - "{{postgresql_repmgr_pid_dir}}"
 
 - name: Deploying Repmgr Sql scripts.
   become: yes
